# substreams-sink-files

./: .gitignore  .goreleaser.yaml  .goreleaser.yml  .sfreleaser  CHANGELOG.md  Dockerfile  README.md  buf.gen.yaml  bundler.go  config.go  go.mod  go.sum  metric.go  sinker.go  state_store.go  substreams.yaml  util.go  util_test.go
bundler/: bundler.go  bundler_test.go  encoder.go  state_store.go  stats.go  type.go  writer.go
devel/: release.sh  substreams-sink-files
docs/tutorial/: Cargo.toml  Makefile  README.md  substreams.yaml
docs/tutorial/src/: lib.rs
docs/tutorial/src/pb/: mod.rs  sf.substreams.sink.files.v1.rs
encoder/: init_test.go  interface.go  lines.go  lines_test.go  proto_to_json.go  proto_to_json_test.go  types.go
internal/: buf.gen.yaml
parquetx/: init_test.go  logging.go  (+8 more)
tests/substreams-uniswap-swap-eth-usdc/: .gitignore  Cargo.toml  README.md  buf.gen.yaml  build.rs  generator.json  substreams.yaml
tests/substreams-uniswap-swap-eth-usdc/abi/: eth_usdc_pool_contract.abi.json
tests/substreams-uniswap-swap-eth-usdc/proto/: contract.proto
tests/substreams-uniswap-swap-eth-usdc/queries/: count_all_rows.sql  describe_table.sql  liquidity_per_month.sql  mint_and_burn_in_same_trx.sql  mint_and_burn_per_block.sql  swap_max_min_date.sql  swaps_liquidity_per_month.sql  swaps_max_min_date.sql
tests/substreams-uniswap-swap-eth-usdc/src/: lib.rs
tests/substreams-uniswap-swap-eth-usdc/src/abi/: eth_usdc_pool_contract.rs  mod.rs
tests/substreams-uniswap-swap-eth-usdc/src/pb/: contract.v1.rs  mod.rs  parquet.rs  sf.substreams.ethereum.v1.rs
(+89 files in other folders)
