[package]
name = "substreams-sink-files-tutorial"
version = "1.0.0"
edition = "2021"

[lib]
name = "substreams"
crate-type = ["cdylib"]

[dependencies]
prost = "0.11"
serde_json = "1.0"
substreams = "0.5.0"
substreams-ethereum = "0.8.0"

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"